basic version of SIRIUS with separate fingerprint prediction and structure db search Tools