@@ -27,54 +27,42 @@ import de.unijena.bioinf.ChemistryBase.ms.DetectedAdducts;
 import de.unijena.bioinf.ChemistryBase.ms.Ms2Experiment;
 import de.unijena.bioinf.ChemistryBase.ms.PossibleAdducts;
 import de.unijena.bioinf.ChemistryBase.ms.ft.IonTreeUtils;
-import de.unijena.bioinf.chemdb.annotations.StructureSearchDB;
 import de.unijena.bioinf.fingerid.annotations.FormulaResultThreshold;
-import de.unijena.bioinf.fingerid.blast.BayesnetScoring;
-import de.unijena.bioinf.fingerid.predictor_types.PredictorTypeAnnotation;
-import de.unijena.bioinf.fingerid.predictor_types.UserDefineablePredictorType;
-import de.unijena.bioinf.jjobs.BasicMasterJJob;
-import de.unijena.bioinf.ms.annotations.AnnotationJJob;
-import de.unijena.bioinf.ms.properties.PropertyManager;
-import de.unijena.bioinf.ms.rest.model.fingerid.FingerprintJobInput;
+import de.unijena.bioinf.jjobs.BasicJJob;
 import de.unijena.bioinf.sirius.IdentificationResult;
 import de.unijena.bioinf.sirius.Ms1Preprocessor;
-import de.unijena.bioinf.utils.NetUtils;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-// FingerID Scheduler job does not manage dependencies between different  tools.
-// this is done by the respective subtooljobs in the frontend
-public class FingerIDJJob<S extends FormulaScore> extends BasicMasterJJob<List<FingerIdResult>> {
-    // structure Elucidator
-    private final CSIPredictor predictor;
-
+/**
+ * Preprocessing JJob to filter and prepare IdentificationResults for Fingerprint prediction.
+ * This includes:
+ * 1. filtering of insufficient FragTrees
+ * 2. Soft thresholding of Formula Candidates
+ * 3. Expansion of Adducts
+ *
+ * @param <S> Scoring type of Identification result
+ */
+//todo currently single threaded because multi threading might not have a big impact here
+public class FingerprintPreprocessingJJob<S extends FormulaScore> extends BasicJJob<List<IdentificationResult<S>>> {
     // input data
     private Ms2Experiment experiment;
     private List<IdentificationResult<S>> idResult = null;
-
-
     protected Map<IdentificationResult<S>, IdentificationResult<S>> addedIdentificationResults = new HashMap<>();
 
-    // temprorary parameter
-    private boolean computeConfidence = true;
-
-    public FingerIDJJob(@NotNull CSIPredictor predictor, boolean confidence) {
-        this(predictor, null, confidence);
+    public FingerprintPreprocessingJJob() {
+        this(null);
     }
 
-    public FingerIDJJob(@NotNull CSIPredictor predictor, @Nullable Ms2Experiment experiment, boolean confidence) {
-        this(predictor, experiment, null, confidence);
+    public FingerprintPreprocessingJJob(@Nullable Ms2Experiment experiment) {
+        this(experiment, null);
     }
 
-    public FingerIDJJob(@NotNull CSIPredictor predictor, @Nullable Ms2Experiment experiment, @Nullable List<IdentificationResult<S>> formulaIDResults, boolean confidence) {
-        super(JobType.SCHEDULER);
-        this.predictor = predictor;
+    public FingerprintPreprocessingJJob(@Nullable Ms2Experiment experiment, @Nullable List<IdentificationResult<S>> formulaIDResults) {
+        super(JobType.CPU);
         this.experiment = experiment;
         this.idResult = formulaIDResults;
-        this.computeConfidence = confidence;
     }
 
     public void setInput(Ms2Experiment experiment, List<IdentificationResult<S>> formulaIDResults) {
@@ -103,12 +91,10 @@ public class FingerIDJJob<S extends FormulaScore> extends BasicMasterJJob<List<F
     }
 
     @Override
-    protected List<FingerIdResult> compute() throws Exception {
-        logDebug("Instance '" + experiment.getName() + "': Starting CSI:FingerID Computation.");
-        if ((experiment.getPrecursorIonType().getCharge() > 0) != (predictor.predictorType.isPositive()))
-            throw new IllegalArgumentException("Charges of predictor and instance are not equal");
+    protected List<IdentificationResult<S>> compute() throws Exception {
+        logDebug("Instance '" + experiment.getName() + "': Starting CSI:FingerID Preprocessing.");
 
-        if (this.idResult.isEmpty()) return null;
+        if (this.idResult.isEmpty()) return List.of();
 
         //sort input with descending score
         final List<IdentificationResult<S>> idResult = new ArrayList<>(this.idResult);
@@ -117,7 +103,7 @@ public class FingerIDJJob<S extends FormulaScore> extends BasicMasterJJob<List<F
 
         // EXPAND LIST for different Adducts
         // expand adduct trees before filtering scores.
-        // This is important because zodiac can create diffent scores for adducts that correspond to the same tree
+        // This is important because zodiac can create different scores for adducts that correspond to the same tree
         logDebug("Expanding Identification Results for different Adducts.");
         {
             final PossibleAdducts adducts;
@@ -220,119 +206,10 @@ public class FingerIDJJob<S extends FormulaScore> extends BasicMasterJJob<List<F
         checkForInterruption();
         if (filteredResults.isEmpty()) {
             logWarn("No suitable fragmentation tree left.");
-            return Collections.emptyList();
+            return List.of();
         }
 
-        final StructureSearchDB searchDB = experiment.getAnnotationOrThrow(StructureSearchDB.class);
-
-        logDebug("Preparing CSI:FingerID search jobs.");
-        ////////////////////////////////////////
-        //submit jobs for prediction and blast
-        ///////////////////////////////////////
-        final PredictorTypeAnnotation predictors = experiment.getAnnotationOrThrow(PredictorTypeAnnotation.class);
-        final Map<AnnotationJJob<?, FingerIdResult>, FingerIdResult> annotationJJobs = new LinkedHashMap<>(filteredResults.size());
-
-        // formula job: retrieve fingerprint candidates for specific MF;
-        // no SubmitSubJob needed because ist is not a CPU or IO job
-        final List<FormulaJob> formulaJobs = filteredResults.stream().map(fingeridInput ->
-                new FormulaJob(
-                        fingeridInput.getMolecularFormula(),
-                        predictor.database,
-                        searchDB.searchDBs,
-                        fingeridInput.getPrecursorIonType(), true) //todo maybe only if confidence is "enabled"
-        ).collect(Collectors.toList());
-
-        submitSubJobsInBatches(formulaJobs, PropertyManager.getNumberOfThreads());
-
-        checkForInterruption();
-        int i = 0;
-
-        final ConfidenceJJob confidenceJJob = (predictor.getConfidenceScorer() != null && computeConfidence)
-                ? new ConfidenceJJob(predictor, experiment)
-                : null;
-
-        for (IdentificationResult<S> fingeridInput : filteredResults) {
-            final FingerIdResult fres = new FingerIdResult(fingeridInput.getTree());
-            // prediction job: predict fingerprint
-            final FingerprintPredictionJJob predictionJob = NetUtils.tryAndWait(
-                    () -> predictor.csiWebAPI.submitFingerprintJob(
-                            new FingerprintJobInput(experiment, fingeridInput, fingeridInput.getTree(), UserDefineablePredictorType.toPredictorTypes(experiment.getPrecursorIonType(), predictors.value))
-                    ), this::checkForInterruption
-            );
-
-            annotationJJobs.put(predictionJob, fres);
-
-            // fingerblast job: score candidate fingerprints against predicted fingerprint
-            final BayesnetScoring bayesnetScoring = NetUtils.tryAndWait(() ->
-                    predictor.csiWebAPI.getBayesnetScoring(predictor.predictorType,fingeridInput.getMolecularFormula()),
-                    this::checkForInterruption);
-
-
-
-            final FingerblastJJob blastJob;
-            if(bayesnetScoring != null) {
-                blastJob = new FingerblastJJob(predictor,bayesnetScoring);
-            }else{
-                // bayesnetScoring is null --> make a prepare job which computes the bayessian network (covTree) for the
-                // given molecular formula
-                blastJob = new FingerblastJJob(predictor);
-                final CovtreeWebJJob covTreeJob = NetUtils.tryAndWait(() ->
-                                predictor.csiWebAPI.submitCovtreeJob(fingeridInput.getMolecularFormula(), predictor.predictorType),
-                        this::checkForInterruption);
-                blastJob.addRequiredJob(covTreeJob);
-            }
-
-            blastJob.addRequiredJob(formulaJobs.get(i++));
-            blastJob.addRequiredJob(predictionJob);
-            if (confidenceJJob != null)
-                confidenceJJob.addRequiredJob(blastJob);
-            annotationJJobs.put(submitSubJob(blastJob), fres);
-
-
-        }
-
-        // confidence job: calculate confidence of scored candidate list that are MERGED among ALL
-        // IdentificationResults results with none empty candidate lists.
-        if (confidenceJJob != null)
-            submitSubJob(confidenceJJob);
-
-            //todo annotate confidence to Tophit
-
-
-        logDebug("Searching with CSI:FingerID");
-        /////////////////////////////////////////////////
-        //collect results and annotate to fingerid Result
-        /////////////////////////////////////////////////
-        // Sub Jobs should also be usable without annotation stuff -> So we annotate outside the subjobs compute methods
-
-        // this loop is just to ensure that we wait until all jobs are finished.
-        // the logic if a job can fail or not is done via job dependencies (so above)
-        checkForInterruption();
-        annotationJJobs.forEach(AnnotationJJob::takeAndAnnotateResult);
-        checkForInterruption();
-
-        if (confidenceJJob != null) {
-            ConfidenceResult confidenceRes = confidenceJJob.awaitResult();
-            if (confidenceRes.top_hit != null) {
-                FingerIdResult topHit = annotationJJobs.values().stream().distinct()
-                        .filter(fpr -> !fpr.getFingerprintCandidates().isEmpty()).max(Comparator.comparing(fpr -> fpr.getFingerprintCandidates().get(0))).orElse(null);
-                if (topHit != null){
-                    if (topHit.getFingerprintCandidates().get(0).getCandidate().getInchiKey2D().equals(confidenceRes.top_hit.getCandidate().getInchiKey2D()))
-                        topHit.setAnnotation(ConfidenceResult.class, confidenceRes);
-                    else
-                        logWarn("TopHit does not Match Confidence Result TopHit!'" + confidenceRes.top_hit.getCandidate().getInchiKey2D() + "' vs '" + topHit.getFingerprintCandidates().get(0).getCandidate().getInchiKey2D() + "'.  Confidence might be lost!");
-                }else {
-                    logWarn("No TopHit found for. But confidence was calculated for: '" + confidenceRes.top_hit.getCandidate().getInchiKey2D() + "'.  Looks like a Bug. Confidence might be lost!");
-                }
-            }else {
-                logWarn("No Confidence computed.");
-            }
-        }
-
-
-        logDebug("CSI:FingerID Search DONE!");
-        //in linked maps values() collection is not a set -> so we have to make that distinct
-        return annotationJJobs.values().stream().distinct().collect(Collectors.toList());
+        return filteredResults;
     }
 
     @Override
